# ModifiedHausdorffDistance

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
MHD/: .pylintrc  pyproject.toml
MHD/.github/workflows/: main.yml
MHD/documentation/: requirement_spec.md
MHD/src/: app.py
MHD/src/dataset/: image_processing.py  mnist.py
MHD/src/tests/: test_mnist.py
documentation/: implementation_document.md  testing_document.md  user_guide.md  weekly_report_1.md  weekly_report_2.md  weekly_report_3.md  weekly_report_4.md  weekly_report_5.md  weekly_report_6.md
src/: app.py
src/dataset/: image_processing.py
src/distance/: mhd.py
src/performance/: performance_tests.py
src/tests/: test_mhd.py  test_mnist.py
