[tool.poetry]
name = "mhd"
version = "0.1.0"
description = ""
authors = ["TuuPu <puontit@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
keras = "^2.8.0"
tensorflow = "^2.8.0"
numpy = "^1.22.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pylint = "^2.12.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
